Rename parameterMap config option to parameters