@@ -26,6 +26,7 @@ import org.neo4j.gds.api.GraphStoreFactory;
 import org.neo4j.gds.concurrency.ConcurrencyValidatorService;
 import org.neo4j.gds.core.CypherMapWrapper;
 
+import java.util.Collections;
 import java.util.Map;
 
 
@@ -57,8 +58,8 @@ public interface GraphProjectFromGraphConfig extends GraphProjectConfig {
 
     @Value.Default
     @Value.Parameter(false)
-    default Map<String, Object> parameterMap() {
-        return Map.of();
+    default Map<String, Object> parameters() {
+        return Collections.emptyMap();
     }
 
     @Value.Check
